--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<div style="height: 50vh">
- <iframe src="//aicamping.com/frame-public-map" height="100%" width="100%" frameborder="0" id="map" scrolling="no"></iframe>
-</div>
+<iframe src="//aicamping.com/frame-public-map" height="500px" width="100%" frameborder="0" id="map" scrolling="no"></iframe>
