--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<iframe src="//aicamping.com/frame-public-map" height="500px" width="100%" frameborder="0" id="map" scrolling="no"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Serhiy Ivaneyko</title>
+  </head>
+  <body>
+	<div><input type="time" placeholder="time" /></div>
+	<div><input type="date" placeholder="date" /></div>    
+  </body>
+</html>
